영화사이트완료

--- a/new-nomad/package.json
+++ b/new-nomad/package.json
@@ -9,6 +9,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -16,7 +17,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "browserslist": {
     "production": [
@@ -31,6 +34,8 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.33.0"
-  }
+    "eslint": "^8.33.0",
+    "gh-pages": "^5.0.0"
+  },
+  "homepage": "https://daisyypeel.github.io/reactStudy"
 }
